k8s/cc-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cc-backend
  template:
    metadata:
      labels:
        app: cc-backend
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: cc-backend
        image: webappacr143101a.azurecr.io/cc_backend:latest
        ports:
        - containerPort: 8000
