k8s/cc-webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cc-webapp-deployment
  namespace: cc-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cc-webapp
  template:
    metadata:
      labels:
        app: cc-webapp
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: cc-webapp
        image: webappacr143101a.azurecr.io/cc_webapp:latest # ACR Image
        ports:
        - containerPort: 80
