k8s/cc-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cc-backend-service
  namespace: default
spec:
  selector:
    app: cc-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
