k8s/cc-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cc-webapp-service
spec:
  type: LoadBalancer
  selector:
    app: cc-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
