k8s/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cc-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: cc-backend-service
            port:
              number: 8000
